--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -208,7 +208,7 @@
               <div class="col-lg-12">
                 <mat-radio-group formControlName="instruccionesManejoCtrl" aria-label="Select an option">
                   <div class="row mt-3">
-                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion">
+                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">
                       <!-- {{option.ClaveInstruccion}} - {{option.Descripcion}} -->
                       {{option.Descripcion}}
                     </mat-radio-button>                    
