--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -132,7 +132,7 @@
           <div class="row mb-3">     
             <div class="col-lg-6">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
+                <input matInput type="text" (change)="checkGafete()" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
                 <mat-error *ngIf="thirdFormGroup.get('numGafeteCtrl').errors?.required">
                   Este campo es obligatorio
                 </mat-error> 
