--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -221,7 +221,7 @@
             <ng-container matColumnDef="Acciones">
               <th mat-header-cell *matHeaderCellDef> Acciones </th>
               <td mat-cell *matCellDef="let element"> 
-                <a class="btn btn-pill btn-ghost-link" (click)="detalleModal.show(); verDetalle(element.IdPrealerta);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
+                <a class="btn btn-pill btn-ghost-links btn-sm" (click)="detalleModal.show(); verDetalle(element.IdPrealerta);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
               </td>
             </ng-container>
 
@@ -427,8 +427,8 @@
 
                             <div class="row justify-content-end">
                               <div class="col-lg mb-1 text-right">
-                                <label for="file-multiple-input">
-                                  <div class="btn btn-pill btn-primary">Subir Documento</div>
+                                <label for="file-multiple-input">                                  
+                                  <div class="btn btn-pill btn-primary btn-sm"><i class="fa fa-upload"></i> Subir Documento</div>
                                 </label>
                                 <input (change)="onFileChanged($event)" style="display: none;" id="file-multiple-input" multiple="" type="file">
                               </div>                                
