Ajustes IconosStatus EstadosColores

--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -161,7 +161,8 @@
               (filesChange) = "dropInputChange($event)"
               class="my-drop-zone"
             >
-            Arrastra / Selecciona tus archivos
+            <div class="my-drop-zone__text d-none d-lg-block d-xl-block">Arrastra / Selecciona tus archivos</div>
+            <div class="my-drop-zone__icon"><i class="fas fa-cloud-upload-alt"></i></div>            
             </div>                                    
           </div>  
 
