--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
-<ngx-loading [show]="loading"></ngx-loading>      
+<ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>      
 <div class="row justify-content-end">  
   <div class="col-lg-12 text-right">
     <button (click)="openDialog()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>    
@@ -9,7 +9,7 @@
 <div class="animated fadeIn">
   <div class="card">     
     <div class="card-body">
-
+      
       <!-- Start Busqueda Superior -->
       <div class="row mb-3">
         <div class="col-lg-9">
@@ -366,8 +366,9 @@
 
                         <div class="row mb-3">                
                           <div *ngFor="let file of detailData.Documentos" class="col col-lg-3">                        
-                            <h1 (click)="openDocument(file.IdDocumento)" style="font-size: 5rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
-                            <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
+                            <!-- <h1 (click)="openDocument(file.IdDocumento)" style="font-size: 5rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
+                            <img (click)="openDocument(file.IdDocumento)" class="file__icon" src="../../../assets/img/iconos/{{file.Estatus | fileIconStatusPipe}}" />
+                            <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                                                  
                           </div>                      
                         </div>
                       </div> <!-- End Card-Body-->
@@ -400,8 +401,8 @@
                           <div *ngFor="let estado of estatusTransferencia" class="col-12">   
                             <div class="row justify-content-start">
                               <div class="col-7 text-left">
-                                <div class="status-filter__circle status-filter__circle--Solicitada"></div>
-                                <!-- <div class="status-filter__circle status-filter__circle--{{estado.Estado | statusPipe }}"></div> -->
+                                <!-- <div class="status-filter__circle status-filter__circle--Solicitada"></div> -->
+                                <div class="status-filter__circle status-filter__circle--{{estado.Estado | statusPipe }}"></div>
                                 <div class="status-filter__text">
                                   <p class="detail-text">{{estado.Estado}}</p>
                                 </div>                        
