--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -1,8 +1,8 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 <ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>      
 <div class="row justify-content-end">  
-  <div class="col-lg-12 text-right">
-    <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Previos</button>
+  <div class="col-lg-12 text-right btn-crear">
+    <button (click)="openDialog()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Previos</button>
   </div>          
 </div>
 
