--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -157,7 +157,8 @@
           <div class="col-lg-12 mb-3">
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
-              accept = ".pdf"                                                           
+              accept = ".pdf"      
+              maxSize   = "4194304"                                                        
               (filesChange) = "dropInputChange($event)"
               class="my-drop-zone"
             >
@@ -166,11 +167,11 @@
             </div>                                    
           </div>  
 
-          <div *ngFor="let documento of model.Documentos; let in=index" class="col-lg-2">    
+          <div *ngFor="let documento of model.Documentos; let in=index" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">    
             <div>
-              <div (click)="removeDocument(in)" class="file__btn-close"><span>&times;</span></div>
-              <div style="font-size: 4rem; text-align: center"><i class="fas fa-file-pdf"></i></div>                  
-              <p style="word-break: break-all; text-align: center">{{documento.NombreDocumento}}</p>                                                                          
+              <div (click)="removeDocument(in)" style="height: .5rem;" class="file__btn-close"><span>&times;</span></div>
+              <div style="font-size: 3rem; text-align: center"><i class="fas fa-file-pdf"></i></div>                  
+              <p style="word-break: break-all; text-align: center" class="detail-text">{{documento.NombreDocumento}}</p>                                                                          
             </div>                                                                      
           </div>                                                
         </div>              
@@ -269,8 +270,8 @@
 
                 <div class="row mt-5 mb-3">                
                   <div *ngFor="let file of model.Documentos" class="col col-lg-2">
-                    <h1 style="font-size: 5rem"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
-                    <p style="word-break: break-all;" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
+                    <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
+                    <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
                   </div>                        
                 </div>              
           </div>
