--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -207,7 +207,7 @@
       <div class="container mt-3">
         <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado<small> (mínimo subir un documento)</small></p>  
         
-        <div class="row mb-5">                     
+        <div class="row mb-3">                     
           <div class="col-lg-12 mb-3">
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
@@ -222,9 +222,11 @@
           </div>  
 
           <div *ngFor="let documento of model.Documentos; let in=index" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">    
+            <div (click)="removeDocument(in)" class="file__btn-close"><span>&times;</span></div>
             <div>
-              <div (click)="removeDocument(in)" style="height: .5rem;" class="file__btn-close"><span>&times;</span></div>
-              <div style="font-size: 3rem; text-align: center"><i class="fas fa-file-pdf"></i></div>                  
+              <!-- <div (click)="removeDocument(in)" style="height: .5rem;" class="file__btn-close"><span>&times;</span></div>
+              <div style="font-size: 3rem; text-align: center"><i class="fas fa-file-pdf"></i></div>                   -->
+              <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
               <p style="word-break: break-all; text-align: center" class="detail-text">{{documento.NombreDocumento}}</p>                                                                          
             </div>                                                                      
           </div>
@@ -237,7 +239,7 @@
               </div> -->                                      
         </div>              
                       
-        <div class="row mt-5">
+        <div class="row mt-3">
           <div class="col-lg-12 text-center">
             <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
             <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
@@ -318,9 +320,10 @@
 
                     <hr class="dividerb">
                   
-                    <div class="row mt-5 mb-3">                
+                    <div class="row mt-4 mb-3">                
                         <div *ngFor="let file of model.Documentos" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                          <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
+                          <!-- <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
+                          <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
                           <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
                         </div>                      
                     </div>
@@ -330,7 +333,7 @@
 
                 </div>
 
-                <div class="row mt-5">
+                <div class="row mt-3">
                   <div class="col-lg-12 text-center">
                     <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
                     <button (click)="crearPrevio()" class="btn btn-pill btn-primary">Enviar</button>
