--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -8,7 +8,7 @@
   [mobileAsideMenuToggler]="false">
   
   
-  <span class="label label-default d-none d-lg-block small mr-auto">Bienvenido! {{user}} | <small class="text-muted d-none d-lg-block">Última sesión {{lastTime}}</small> </span>
+  <span class="label label-default d-none d-lg-block small mr-auto">Bienvenido! {{user}} <small class="text-muted d-none d-lg-block">Última sesión {{lastTime}}</small> </span>
   <span class="label label-default d-none d-lg-block small"><small class="text-muted">Sesión actual {{logTime | date:'dd/MMM/y'}} &nbsp;|&nbsp;hora {{logTime | date:'h:mm a'}}</small></span>
   <ul class="nav navbar-nav">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
@@ -63,7 +63,7 @@
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Administrador</strong></div>
         <div class="divider"></div>
-        <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('404')" ><i class="icon-note"></i>Bitácora</a>
+        <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('bitacoras')" ><i class="icon-note"></i>Bitácora</a>
         <div class="dropdown-divider" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' "></div>
         <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('adminuser')" ><i class="icon-people"></i> Admin de usuarios</a>
         <div class="dropdown-divider" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' "></div>
@@ -71,6 +71,9 @@
         <!-- <div class="dropdown-divider"></div> -->
         <a class="dropdown-item" href="#" (click)="closeSession()"><i class="cui-account-logout"></i> Salir</a>
       </div>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link navbar-toggler" href="#" appAsideMenuToggler>&#9776;</a>
     </li>
   </ul>
 </app-header>
@@ -89,6 +92,9 @@
       <router-outlet></router-outlet>
     </div><!-- /.container-fluid -->
   </main>
+  <app-aside [fixed]="false" [display]="false">
+    
+  </app-aside>
 </div>
 <app-footer>
   <div class="container footer-container text-center text-md-left mt-3">
