--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -13,21 +13,21 @@
             <!-- busqueda rango fechas -->
             <div class="col-lg-3 mb-1 invalid--no-color">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="rangoFechaSearch"  bsDaterangepicker [bsConfig]="{ adaptivePosition: true }" class="rangoFecha" placeholder="Rango de Fecha">
+                <input matInput type="text" [(ngModel)]="rangoFechaSearch" #fechaSearch bsDaterangepicker [bsConfig]="{ rangeInputFormat : 'DD-MM-YYYY' }" placement="right top" class="rangoFecha" placeholder="Rango de Fecha" required>
               </mat-form-field>
             </div>
 
             <!-- busqueda modulo -->
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <mat-select [(ngModel)]="busquedaBit.Modulo" class="" placeholder="Instrucciones de Manejo" #singleSelect>
+                <mat-select [(ngModel)]="busquedaBit.Modulo" placeholder="Módulo" #singleSelect>
                   <mat-option>                      
-                    <ngx-mat-select-search [(ngModel)]="moduloSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                    <ngx-mat-select-search [(ngModel)]="moduloSearch" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                   </mat-option>
-                  <mat-option>Ninguno</mat-option>                    
-                  <!-- <mat-option *ngFor="let option of instruccionesManejoCatalogo | filterSelect: instruccionesManejoSearch" [value]="option.ClaveInstruccion"> 
-                    {{option.Descripcion}}
-                  </mat-option> -->
+                  <mat-option [value]="">Ninguno</mat-option>                    
+                  <mat-option *ngFor="let option of modulosGet | filterSelectSingle: moduloSearch" [value]="option"> 
+                    {{option}}
+                  </mat-option>
                 </mat-select>                  
               </mat-form-field>
             </div>
@@ -35,14 +35,14 @@
             <!-- busqueda usuario -->
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <mat-select [(ngModel)]="busquedaBit.IdCuentaEspecifica" class="" placeholder="Instrucciones de Manejo" #singleSelect>
+                <mat-select [(ngModel)]="busquedaBit.IdCuentaEspecifica" class="" placeholder="Usuario" #singleSelect>
                   <mat-option>                      
-                    <ngx-mat-select-search [(ngModel)]="usuarioSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                    <ngx-mat-select-search [(ngModel)]="usuarioSearch" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                   </mat-option>
-                  <mat-option>Ninguno</mat-option>                    
-                  <!-- <mat-option *ngFor="let option of instruccionesManejoCatalogo | filterSelect: instruccionesManejoSearch" [value]="option.ClaveInstruccion"> 
-                    {{option.Descripcion}}
-                  </mat-option> -->
+                  <mat-option [value]="">Ninguno</mat-option>                    
+                  <mat-option *ngFor="let option of usuariosGet | filterSelect: usuarioSearch" [value]="option.IdCliente"> 
+                    {{option.Nombre}}
+                  </mat-option>
                 </mat-select>                  
               </mat-form-field>
             </div>
@@ -86,13 +86,13 @@
           <!-- Hora Column -->
           <ng-container matColumnDef="Hora">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
-            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion }} </td>
+            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion | date:'h:mm a' }} </td>
           </ng-container>
           
           <!-- Hora Column -->
           <ng-container matColumnDef="Fecha">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{ element.Modulo }} </td>
+            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion | date:'dd/MMM/y'  }} </td>
           </ng-container>
 
 
