--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -40,8 +40,8 @@
                     <ngx-mat-select-search [(ngModel)]="usuarioSearch" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                   </mat-option>
                   <mat-option [value]="">Ninguno</mat-option>                    
-                  <mat-option *ngFor="let option of usuariosGet | filterSelect: usuarioSearch" [value]="option.IdCliente"> 
-                    {{option.Nombre}}
+                  <mat-option *ngFor="let option of usuariosGet | filterSelect: usuarioSearch" [value]="option['IdCliente']"> 
+                    {{option['Nombre']}}
                   </mat-option>
                 </mat-select>                  
               </mat-form-field>
@@ -66,38 +66,37 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <!-- Usuario Column -->
-          <ng-container matColumnDef="Usuario">
+          <ng-container matColumnDef="Nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
             <td mat-cell *matCellDef="let element"> {{ element.Nombre }} </td>
           </ng-container>
 
           <!-- Acciones Column -->
-          <ng-container matColumnDef="Acciones">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+          <ng-container matColumnDef="Accion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones de uso</th>
             <td mat-cell *matCellDef="let element"> {{ element.Accion }} </td>
           </ng-container>
 
           <!-- Detalles Column -->
-          <ng-container matColumnDef="Detalles">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles </th>
+          <ng-container matColumnDef="Detalle">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles de acción </th>
             <td mat-cell *matCellDef="let element"> {{ element.Detalle }} </td>
           </ng-container>
 
-          <!-- Hora Column -->
-          <ng-container matColumnDef="Hora">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
-            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion | date:'h:mm a' }} </td>
-          </ng-container>
-          
-          <!-- Hora Column -->
+          <!-- fecha Column -->
           <ng-container matColumnDef="Fecha">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion | date:'dd/MMM/y'  }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Acción</th>
+            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion.split(' ')[0]  }} </td>
+          </ng-container>
+
+           <!-- Hora Column -->
+           <ng-container matColumnDef="Hora">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora de acceso </th>
+            <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion.split(' ')[1] }} </td>
           </ng-container>
 
 
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         <mat-paginator [length]="100"
